fix hr alignment for edge

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ hr {
 	position: relative;
 	border: 0;
 	margin: 30px 0 0 0;
+	text-align: left;
 }
 /* Navigation */
 #menu {
